--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/lab-api
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=admin
 
 hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.ddl-auto=update
