--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jackson.serialization.fail-on-empty-beans=false
+spring.main.allow-circular-references=true
