--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.main.allow-circular-references=true
 
 jwt.password=${JWT_PASSWORD:4b9794d031895e188c3bb09e59d1242f}
 
+spring.security.enable = true
