--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/Biolab
+spring.datasource.url= jdbc:postgresql://localhost:5432/lab-api
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=root
 
 hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.ddl-auto=update
@@ -13,5 +13,3 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.main.allow-circular-references=true
 
 jwt.password=${JWT_PASSWORD:4b9794d031895e188c3bb09e59d1242f}
-
-spring.security.enable = true
