Correções em AtendimentoController no atributo MedicoSolicitante

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/lab-api
+spring.datasource.url= jdbc:postgresql://localhost:5432/Biolab
 spring.datasource.username=postgres
-<<<<<<< HEAD
-spring.datasource.password=postgres
->>>>>>> 8a6863b907c86c2e95738e8cc2e4062ebcdb36b4
+spring.datasource.password=1234
 
-hibernate.hbm2ddl.auto=updateSS
+hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -15,3 +13,4 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.main.allow-circular-references=true
 
 jwt.password=${JWT_PASSWORD:4b9794d031895e188c3bb09e59d1242f}
+
