--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/lab-api
 spring.datasource.username=postgres
-<<<<<<< HEAD
-spring.datasource.password=postgres
->>>>>>> 8a6863b907c86c2e95738e8cc2e4062ebcdb36b4
+spring.datasource.password=admin
 
-hibernate.hbm2ddl.auto=updateSS
+hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
