Tratando o erro de CPF ou Email existente

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/Biolab
+spring.datasource.url= jdbc:postgresql://localhost:5432/lab-api
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=root
 
 hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.ddl-auto=update
@@ -15,4 +15,3 @@ spring.main.allow-circular-references=true
 jwt.password=${JWT_PASSWORD:4b9794d031895e188c3bb09e59d1242f}
 
 server.port: 8080
-
