--- a/api/pom.xml
+++ b/api/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version> <!-- Versão pode variar -->
+        </dependency>
+
     </dependencies>
 
     <build>
